2006-07-22  Bruno Haible  <bruno@clisp.org>

	* wcwidth.h: New file, from gnulib.
	* Makefile.am (libgettextlib_la_SOURCES): Add it.

	* gcd.c: Update from gnulib.

	* fwriteerror.c: Update from gnulib.

	* fnmatch_.h: Update from gnulib.
	* fnmatch.c: Likewise.
	* fnmatch_loop.c: Likewise.

	* fatal-signal.c: Include <config.h>, not "config.h".
	* findprog.c: Likewise.

	* c-strcasecmp.c: Update from gnulib. Don't assume that
	UCHAR_MAX <= INT_MAX.
	* c-strncasecmp.c: Likewise.

	* copy-file.c: Update from gnulib.

	* atexit.c: Update from gnulib.

	* verify.h: New file, from gnulib.
	* argmatch.h: Update from gnulib, keeping DLL_VARIABLE annotation.
	* Makefile.am (libgettextlib_la_SOURCES): Add verify.h.

2006-07-21  Bruno Haible  <bruno@clisp.org>

	* gettext-0.15 released.

2006-07-14  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (MOSTLYCLEANFILES): Add core and *.stackdump.

2006-07-13  Bruno Haible  <bruno@clisp.org>

	Fix construction of temporary directory names on mingw.
	* tmpdir.c (ISSLASH): New macro.
	(path_search): Use it, and remove also the first character if it is
	a slash.
	Reported by Steffen Macke <sdteffen@gmail.com>.

2006-07-13  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (EXTRA_DIST): Add javaversion.class.

2006-07-11  Bruno Haible  <bruno@clisp.org>

	* javacomp.c: Fix a comment.
	Reported by Jim Meyering.

2006-07-02  Bruno Haible  <bruno@clisp.org>

	* clean-temp.h (register_temp_file): Renamed from enqueue_temp_file.
	(unregister_temp_file): Renamed from dequeue_temp_file.
	(register_temp_subdir): Renamed from enqueue_temp_subdir.
	(unregister_temp_subdir): Renamed from dequeue_temp_subdir.
	* clean-temp.c (register_temp_file): Renamed from enqueue_temp_file.
	(unregister_temp_file): Renamed from dequeue_temp_file.
	(register_temp_subdir): Renamed from enqueue_temp_subdir.
	(unregister_temp_subdir): Renamed from dequeue_temp_subdir.
	(cleanup_temp_file, cleanup_temp_subdir): Update.