@@ -1,5 +1,7 @@
 2006-07-22  Bruno Haible  <bruno@clisp.org>
 
+	* mbswidth.m4: Update from gnulib.
+
 	* wcwidth.m4: New file, from gnulib.
 	* Makefile.am (EXTRA_DIST): Add it.
 
